[package]
name = "rusty_loader"
version = "0.1.0"
authors = ["Gabriel Smith <ga29smith@gmail.com>"]
edition = "2018"

[dependencies]
clap = "^2.33"
ihex = "^1.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.7", features = ["impl-default", "fileapi", "ioapiset", "handleapi", "hidsdi", "setupapi", "synchapi", "winerror"] }
